fix admin styles and display of columns so titles of posts don't get squished

--- a/wp-content/themes/make-experiences/css/admin-styles.css
+++ b/wp-content/themes/make-experiences/css/admin-styles.css
@@ -9,3 +9,16 @@
 #espresso-default-admin #mtp_extra_actions p::after {
 	content: " Too BAD"
 }
+@media screen and (min-width: 787px) {
+	.table-view-list th#title{
+		width: 15%;
+	}
+}
+.table-view-list th#mepr-access{
+	width: 10%;
+}
+@media screen and (max-width: 1000px) {
+	.table-view-list th[id^=wpseo], .table-view-list td[class^=wpseo] {
+		display: none;
+	}
+}
